Bug 153803 - Dropdown borders are not consistent in dark mode (kf5-only)
Summary: Dropdown borders are not consistent in dark mode (kf5-only)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2023-02-24 13:00 UTC by Rafael Lima
Modified: 2023-03-04 07:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (33.23 KB, image/png)
2023-02-24 13:00 UTC, Rafael Lima
Details
Screenshot of borders in Kate (21.44 KB, image/png)
2023-02-24 13:04 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2023-02-24 13:00:43 UTC
Created attachment 185565 [details]
Screenshot showing the problem

The borders of dropdown controls in the UI are drawn in white for the right and bottom borders. See attached image for more details. Top and left borders are drawn in dark gray.

This only happens in kf5.

In gtk3 all borders are dark gray.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 29d795b772cb75ee1d12cc6bcd4d905f1c520a79
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Rafael Lima 2023-02-24 13:04:19 UTC
Created attachment 185566 [details]
Screenshot of borders in Kate

Actually it seems the dropdown borders are not using the correct color at all. See this screenshot of a dropdown control in Kate and notice that the border colors are lighter and look a bit thicker.
Comment 2 Michael Weghorn 2023-03-03 07:01:42 UTC
Confirmed.

Suggested Gerrit change:
https://gerrit.libreoffice.org/c/core/+/148160
Comment 3 Commit Notification 2023-03-04 07:43:40 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e0054dfd7dbf382325696cefb24a6bc48474293

tdf#153803 qt: Let Qt style draw combobox popup borders

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.