tdf#153803 qt: Let Qt style draw combobox popup borders

... and listbox popup borders as well.

Declare suppport for native drawing of focus for
pushbuttons, since the Qt-based
VCL plugins take care of drawing focus for controls.
As far as I can see, there is no need to actually
implement drawing of focus separately for the Qt-based
VCL plugins, though, since that is already handled by the
`ControlState::FOCUSED` state when drawing the entire control.

Support for this is what `ComboBox::ImplInit` and `ListBox::ImplInit`
check and if it's not supported, they enable double
buffering for the window (which would have the result that
the `pWin` in `ImplDrawFrame` in
vcl/source/window/decoview.cxx would be nullptr and thus
no native drawing of the frame would happen), s.a.

    commit d4714b0fdb81e6e561ae526cc517ecc9a40a603e
    Date:   Mon Jun 17 17:02:54 2019 +0200

        tdf#101978 vcl combobox/listbox floating window: avoid flicker

With this in place, the border in the popup windows
for listboxes and comboboxes are drawn by the Qt style.

Yet another way to achieve this would be to support drawing
`ControlPart::ListboxWindow` for `ControlType::Listbox`,
so that the other rendering path in
`ImplSmallBorderWindowView::DrawWindow` is taken, but that is currently
complicated by the fact that bounding and content rect are
not really used consequently there, so that would have to be cleaned
up first, s.a. the commit message in

    commit 5c96e813bed3293605f8d746f188cc051d1e5949
    Date:   Thu Feb 2 15:27:37 2023 +0000

        tdf#150451 Fix borders in Editbox controls (kf5)

for more details.

Change-Id: I8cd2396e7075a475e53e016acbb16d6fb54bad2f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148160
Tested-by: Jenkins
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>